--- a/i3/config
+++ b/i3/config
@@ -240,6 +240,7 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id volnoti
 #exec compton --vsync opengl
 exec --no-startup-id i3-msg 'workspace $1; exec telegram-desktop; workspace $2; exec chrome'
+exec --no-startup-id xss-lock --ignore-sleep -- $confpath/exit_terminal.sh
 
 client.focused #0088CC #0088CC #ffffff #dddddd
 client.focused_inactive #333333 #333333 #888888 #292d2e
